--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   pointer-events: none;
 }
 
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -27,6 +28,61 @@
 .App-link {
   color: #61dafb;
 }
+
+/*  */
+.btn-wrapper button {
+  background-color: #3a9686;
+  border: 0px;
+  padding: 10px;
+  border-radius: 4px;
+  color: #fff;
+  box-shadow: #333 0px 1px 5px;
+}
+.img-wrapper img {
+  width: 100px;
+  /* margin-top: 10px; */
+  border-radius: 10px;
+}
+.cart-wrapper{
+  height: 100px;
+    width: 500px;
+    border: 1px solid #ccc;
+    margin-left: 10%;
+}
+.item {
+  float: left;
+  /* display: inline-block; */
+  width: 120px;
+  padding: 10px;
+  height: 70px;
+}
+.add-to-cart img{
+  width: 80px;
+    position: absolute;
+    right: 1%;
+    top: 1%;
+}
+
+.cart-count{
+  position: absolute;
+  right: 12px;
+  top: 10px;
+  z-index: 1;
+  background-color: #3a9686;
+  padding: 7px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  color: #fff;
+}
+
+button.remove-cart-btn{
+  background-color: rgb(8, 83, 83);
+  margin-top: 8px;
+  width: 130px;
+}
+/*  */
+
 
 @keyframes App-logo-spin {
   from {
